--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@react-three/postprocessing": "^2.0.3",
     "@tweenjs/tween.js": "^18.6.4",
     "iconify": "^1.4.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
